--- a/scripts/bahaar_analysis.rmd
+++ b/scripts/bahaar_analysis.rmd
@@ -1,91 +1,116 @@
-############################################################
+
 # Q4 - Bahaar Analysis
 # Goal: Explore alternative feature selection (LASSO + Ridge)
-############################################################
 
+
+```{r}
 # Load libraries
 library(tidyverse)
 library(glmnet)
 library(pROC)
 library(caret)
+library(yardstick)
+```
 
-# -------------------------------------------------------------------
-# 1. Load processed data (from preprocessing.R step)
-# -------------------------------------------------------------------
-load("data/biomarker-clean.RData")  # loads biomarker_clean
 
-# Rename for convenience
+```{r}
+# 1. Load processed data
+
+load("~/module-1-biomarker-data-table13/data/biomarker-clean.RData") 
+
+# Rename 
 biomarker <- biomarker_clean
 
 # Convert group to factor (TD = control group)
 biomarker$group <- factor(biomarker$group, levels = c("TD", "ASD"))
 
-# -------------------------------------------------------------------
+```
+
+
+```{r}
 # 2. Train/Test Split (80% train, 20% test)
-# -------------------------------------------------------------------
+
 set.seed(123)
 train_idx <- createDataPartition(biomarker$group, p = 0.8, list = FALSE)
 
 train <- biomarker[train_idx, ]
-test  <- biomarker[-train_idx, ]
+test <- biomarker[-train_idx, ]
 
-# Select predictors only (exclude group and ados)
-predictors <- biomarker %>% select(-group, -ados)
+# Prepare matrices for glmnet
+x_train <- as.matrix(train %>% select(-group, -ados))
+y_train <- train$group
 
-x_train <- as.matrix(predictors[train_idx, ])
-y_train <- biomarker$group[train_idx]
+x_test <- as.matrix(test %>% select(-group, -ados))
+y_test <- test$group
+```
 
-x_test <- as.matrix(predictors[-train_idx, ])
-y_test <- biomarker$group[-train_idx]
 
-# -------------------------------------------------------------------
-# 3. LASSO (alpha = 1)
-# -------------------------------------------------------------------
+```{r}
+# 3. LASSO Classification and Feature Selection 
+
 set.seed(123)
 lasso_fit <- cv.glmnet(
   x_train, y_train,
-  alpha = 1,          # LASSO
+  alpha = 1, # LASSO penalty
   family = "binomial"
 )
 
-# Extract non-zero coefficients
+# Extract non-zero coefficients (The Alternative Panel)
 lasso_coef <- coef(lasso_fit, s = "lambda.min")
 lasso_features <- rownames(lasso_coef)[lasso_coef[, 1] != 0]
 lasso_features <- lasso_features[lasso_features != "(Intercept)"]
 
-cat("\nTop proteins from LASSO:\n")
+cat("\nQ4 Alternative Panel (Pure LASSO features):\n")
 print(lasso_features)
+```
 
-# -------------------------------------------------------------------
-# 4. Ridge (alpha = 0)
-# -------------------------------------------------------------------
-set.seed(123)
-ridge_fit <- cv.glmnet(
-  x_train, y_train,
-  alpha = 0,          # Ridge
-  family = "binomial"
+
+```{r}
+# 4. Evaluation of LASSO Classifier on Test Set (The Answer)
+
+# Predict probabilities on the held-out test set
+pred_prob_lasso <- predict(lasso_fit, newx = x_test, s = "lambda.min", type = "response")
+pred_class_lasso <- factor(ifelse(pred_prob_lasso > 0.5, "ASD", "TD"), levels = c("TD", "ASD"))
+
+# Calculate AUROC
+roc_lasso <- roc(y_test, as.numeric(pred_prob_lasso), levels = c("TD", "ASD"))
+auroc_final <- auc(roc_lasso)
+
+cat("\nAUROC (LASSO classifier) on Test Set: ", auroc_final, "\n")
+cat("Test Set Accuracy (LASSO classifier): ", confusionMatrix(pred_class_lasso, y_test, positive = "ASD")$overall['Accuracy'], "\n")
+
+```
+Q4: Use any method to find either a simpler panel or an alternative panel.
+
+We chose to find an alternative panel that achieves improved classification accuracy by utilizing the pure LASSO (Least Absolute Shrinkage and Selection Operator) penalized regression model.
+
+
+The original analysis used the intersection of three methods ($t$-test, Random Forest, and LASSO) followed by an unregularized Logistic Regression. For this alternative approach, we used the LASSO method alone to perform both feature selection and classification. The LASSO model was trained on the $80\%$ training partition, and the optimal penalty ($\lambda_{\text{min}}$) automatically selected the feature panel.
+
+Results:
+
+1. Alternative Panel: The LASSO model selected a panel of 43 proteins (listed in the code output).
+
+2. Test Set Performance: The LASSO classifier achieved a Test Set AUROC (Area Under the Receiver Operating Characteristic curve) of $0.8578$ (Accuracy: $\approx 0.767$).
+
+
+```{r}
+comparison_data <- data.frame(
+  Metric = c("AUROC"),
+  `In-Class Analysis Benchmark (Approx.)` = c(0.825), 
+  `Q4 Alternative Panel (Pure LASSO)` = c(0.8578), 
+  Conclusion = c("Improved")
 )
 
-# Rank coefficients by absolute value (largest first)
-ridge_coef <- coef(ridge_fit, s = "lambda.min")
-ridge_features <- rownames(ridge_coef)[order(abs(ridge_coef[, 1]), decreasing = TRUE)]
-ridge_features <- ridge_features[2:11]  # top 10 excluding intercept
+library(knitr)
 
-cat("\nTop proteins from Ridge:\n")
-print(ridge_features)
+kable(comparison_data, 
+      caption = "Benchmark of Classification Accuracy for Alternative Panel",
+      digits = 4, 
+      col.names = c("Metric", "In-Class Benchmark (Approx.)", "Q4 Pure LASSO Panel", "Conclusion"),
+      align = 'lccc')
 
-# -------------------------------------------------------------------
-# 5. Evaluate model (using LASSO-selected features)
-# -------------------------------------------------------------------
-pred_prob <- predict(lasso_fit, newx = x_test, s = "lambda.min", type = "response")
+```
 
-# Convert to binary predictions using 0.5 cutoff
-pred_class <- factor(ifelse(pred_prob > 0.5, "ASD", "TD"), levels = c("TD", "ASD"))
 
-# Confusion matrix
-conf_mat <- confusionMatrix(pred_class, y_test, positive = "ASD")
-print(conf_mat)
-
-# ROC / AUC
-roc_auc <- roc(y_test, as.numeric(pred_prob))
-cat("\nAUROC (LASSO classifier): ", auc(roc_auc), "\n")
+The pure LASSO approach resulted in an Alternative Panel that achieved improved classification accuracy  compared to the in-class intersection method. By using the penalized LASSO model for the final classification, we avoided the multicollinearity and numerical instability that would break an unregularized Logistic Regression model when handling this large, correlated set of 43 features. The $0.8578$ AUROC is the highest accuracy achieved in our experiments.
