--- a/scripts/bahaar_analysis.rmd
+++ b/scripts/bahaar_analysis.rmd
@@ -1,15 +1,26 @@
+---
+title: "Bahaar analysis"
+author: "Bahaar Ahuja"
+date: "2025-11-05"
+output: pdf_document
+---
 
-# Q4 - Bahaar Analysis
-# Goal: Explore alternative feature selection (LASSO + Ridge)
+### Q4 - Use any method to find either: 
+### a simpler panel that achieves comparable classification accuracy
+### an alternative panel that achieves improved classification accuracy
+
+### Benchmark your results against the in-class analysis.
+
+## Goal: Explore alternative feature selection 
 
 
 ```{r}
 # Load libraries
-library(tidyverse)
-library(glmnet)
-library(pROC)
-library(caret)
-library(yardstick)
+suppressPackageStartupMessages(library(tidyverse))
+suppressPackageStartupMessages(library(caret))
+suppressPackageStartupMessages(library(glmnet))
+suppressPackageStartupMessages(library(pROC))
+suppressPackageStartupMessages(library(yardstick))
 ```
 
 
@@ -31,7 +42,8 @@ biomarker$group <- factor(biomarker$group, levels = c("TD", "ASD"))
 # 2. Train/Test Split (80% train, 20% test)
 
 set.seed(123)
-train_idx <- createDataPartition(biomarker$group, p = 0.8, list = FALSE)
+train_idx <- createDataPartition(biomarker$group, 
+                                 p = 0.8, list = FALSE)
 
 train <- biomarker[train_idx, ]
 test <- biomarker[-train_idx, ]
@@ -69,15 +81,21 @@ print(lasso_features)
 # 4. Evaluation of LASSO Classifier on Test Set (The Answer)
 
 # Predict probabilities on the held-out test set
-pred_prob_lasso <- predict(lasso_fit, newx = x_test, s = "lambda.min", type = "response")
-pred_class_lasso <- factor(ifelse(pred_prob_lasso > 0.5, "ASD", "TD"), levels = c("TD", "ASD"))
+pred_prob_lasso <- predict(lasso_fit, newx = x_test, 
+                           s = "lambda.min", type = "response")
+pred_class_lasso <- factor(ifelse(pred_prob_lasso > 0.5, 
+                                  "ASD", "TD"), levels = c("TD", "ASD"))
 
 # Calculate AUROC
-roc_lasso <- roc(y_test, as.numeric(pred_prob_lasso), levels = c("TD", "ASD"))
+roc_lasso <- roc(y_test, as.numeric(pred_prob_lasso), 
+                 levels = c("TD", "ASD"))
 auroc_final <- auc(roc_lasso)
 
-cat("\nAUROC (LASSO classifier) on Test Set: ", auroc_final, "\n")
-cat("Test Set Accuracy (LASSO classifier): ", confusionMatrix(pred_class_lasso, y_test, positive = "ASD")$overall['Accuracy'], "\n")
+cat("\nAUROC (LASSO classifier) on Test Set: ", 
+    auroc_final, "\n")
+cat("Test Set Accuracy (LASSO classifier): ", 
+    confusionMatrix(pred_class_lasso, y_test, 
+                    positive = "ASD")$overall['Accuracy'], "\n")
 
 ```
 Q4: Use any method to find either a simpler panel or an alternative panel.
@@ -107,7 +125,8 @@ library(knitr)
 kable(comparison_data, 
       caption = "Benchmark of Classification Accuracy for Alternative Panel",
       digits = 4, 
-      col.names = c("Metric", "In-Class Benchmark (Approx.)", "Q4 Pure LASSO Panel", "Conclusion"),
+      col.names = c("Metric", "In-Class Benchmark (Approx.)",
+                    "Q4 Pure LASSO Panel", "Conclusion"),
       align = 'lccc')
 
 ```
