--- a/scripts/lucas_analysis.Rmd
+++ b/scripts/lucas_analysis.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 ```
 
-1. What is the reason for log transforming protein levels in `biomarker-raw.csv`? 
+## 1. What is the reason for log transforming protein levels in `biomarker-raw.csv`? 
 
 ```{r}
 set.seed(1234)
@@ -91,6 +91,102 @@ qqline(log10(prot2))
 ```
 
 After transforming `prot2`, the protein values appear slightly more normal, reducing the influential outliers. Overall, log transforming the protein levels acted as a way to reduce the large scale of the values, and make the data more symmetric.
+
+## 4. Find a simpler panel that achieves comparable classification strategy using a different method
+
+```{r}
+library(glmnet)
+library(yardstick)
+
+load(here("data", "biomarker-clean.RData"))
+
+X <- biomarker_clean %>%
+  select(-c(group, ados)) %>%
+  as.matrix()
+
+# turn outcome into a factor
+y <- as.factor(ifelse(biomarker_clean$group == "ASD", 1, 0))
+
+set.seed(123)
+n <- nrow(X)
+train_idx <- sample(1:n, size = floor(0.8 * n))
+test_idx <- setdiff(1:n, train_idx)
+
+X_train <- X[train_idx, ]
+y_train <- y[train_idx]
+
+X_test <- X[test_idx, ]
+y_test <- y[test_idx]
+
+cat("Training set size:", length(train_idx), "\n")
+cat("Test set size:", length(test_idx), "\n\n")
+
+# LASSO on training data
+
+cv_fit <- cv.glmnet(
+  x = X_train,
+  y = y_train,
+  family = "binomial",
+  alpha = 1,  # LASSO
+  nfolds = 10
+)
+
+
+lasso_coef <- coef(cv_fit, s = "lambda.min")
+
+selected_proteins <- data.frame(
+  protein = rownames(lasso_coef),
+  coefficient = as.vector(lasso_coef)
+) %>%
+  filter(protein != "(Intercept)", coefficient != 0) %>%
+  arrange(desc(abs(coefficient)))
+
+cat("LASSO selected", nrow(selected_proteins), "proteins\n\n")
+
+# Get predicted probabilities
+pred_prob <- predict(cv_fit, 
+                     newx = X_test, 
+                     s = "lambda.1se", 
+                     type = "response")[,1]
+
+# Get predicted classes (threshold = 0.5)
+pred_class <- as.factor(ifelse(pred_prob > 0.5, 1, 0))
+
+# Performance
+# Create data frame for yardstick
+results_df <- tibble(
+  truth = y_test,
+  predicted = pred_class,
+  prob_ASD = pred_prob
+)
+
+# Calculate metrics
+metrics <- metric_set(accuracy, sensitivity, specificity, roc_auc)
+
+performance <- results_df %>%
+  metrics(truth = truth, 
+          estimate = predicted, 
+          prob_ASD,
+          event_level = "second")  # ASD is the "positive" class
+
+cat("Performance Metrics:\n")
+print(knitr::kable(performance))
+
+# Extract individual metrics for display
+acc <- performance %>% filter(.metric == "accuracy") %>% pull(.estimate)
+sens <- performance %>% filter(.metric == "sensitivity") %>% pull(.estimate)
+spec <- performance %>% filter(.metric == "specificity") %>% pull(.estimate)
+auc <- performance %>% filter(.metric == "roc_auc") %>% pull(.estimate)
+```
+
+**Evaluation metrics:** In Hewitson et al. 2021, a logistic regression model was fit using their final panel of proteins, and they evaluated its performance using AUC, sensitivity, and specificity. To benchmark our method, we'll compare our results to the `inclass-analysis.R` results, where the metrics were
+
+Their results were:
+$$
+\text{roc_auc} = 0.883 \text{ ; accuracy}=0.774  \text{ ; sensitivity} = 0.812  \text{ ; specificity} = 0.733 
+$$
+
+
 
 
 
