--- a/scripts/bahaar_analysis.rmd
+++ b/scripts/bahaar_analysis.rmd
@@ -69,7 +69,7 @@ lasso_fit <- cv.glmnet(
 )
 
 # Extract non-zero coefficients (The Alternative Panel)
-lasso_coef <- coef(lasso_fit, s = "lambda.1se")
+lasso_coef <- coef(lasso_fit, s = "lambda.min")
 lasso_features <- rownames(lasso_coef)[lasso_coef[, 1] != 0]
 lasso_features <- lasso_features[lasso_features != "(Intercept)"]
 
