--- a/scripts/anna_analysis.rmd
+++ b/scripts/anna_analysis.rmd
@@ -57,12 +57,66 @@ library(knitr)
 load(here("data", "biomarker-clean-notrim.RData"))
 bm_notrim_clean <- biomarker_clean 
 
-kable(head(bm_notrim_clean, 20))
+kable(head(bm_notrim_clean, 10))
          
 ```
 
 
+EDA: 
 
 
+Counting the number of outliers per subject.
+A data point is considered an outlier if its value is greater than 3 standard deviations, 99.7% of the distribution under a normal curve.
 
+Thus, flagging outliers that have (z score) |z| > 3.
+```{r}
+protein <- setdiff(names(bm_notrim_clean), c("group","ados"))
+out_flag <- bm_notrim_clean[, protein] %>% mutate(across(everything(), ~ abs(.x) > 3))
+out_counts <- tibble(
+  subject = seq_len(nrow(bm_notrim_clean)),
+  group   = bm_notrim_clean$group,
+  n_out   = rowSums(out_flag, na.rm=TRUE)
+) 
+
+```
+
+
+The top 10 subjects with the highest outlier proteins:
+```{r}
+top_subjects <- out_counts %>% arrange(desc(n_out)) %>% slice_head(n = 10)
+kable(top_subjects)
+
+```
+
+From this table, there seems to be several subjects that are outliers.
+Subject #154 had 157 proteins whose z-scores exceeded +/- 3. 
+Thus, out of 1,125 proteins, roughly 14% of them were outliers. 
+
+Also, subjects 108, 9, 121, 52, and 77 all have over 100 proteins over the 
+threshold we set, translating to roughly 10.1% - 11.3% of the proteins in each subject
+being considered an outlier.
+
+Are outliers more frequent in one group or the other? (Hint: consider tabulating the number of outlying values per subject.)
+
+Comparing the outliers of each group:
+```{r}
+ggplot(out_counts, aes(group, n_out)) +
+  geom_boxplot(outlier.shape=NA) + geom_jitter(width=.15, alpha=.4)
+```
+From the visual, it seems like the TD group has more outliers, with the highest number of outliers per subject being around 150. This supports the previous table, as 7/10 of the top 10 subjects with the highest outliers were from the TD group.
+
+
+Wilcoxon rank-sum test comparing the per-subject outlier counts (n_out) between the two groups (ASD vs TD).
+```{r}
+result <- wilcox.test(n_out ~ group, data = out_counts, exact=FALSE)
+result
+
+```
+
+From the Wilcoxon rank-sum test, the p-value of 0.8166 > $alpha$ = 0.05, so we conclude there is no evidence of a significant difference in outlier counts between the ASD and TD groups.
+
+
+Conclusion:
+
+Counting |z|>3 outliers per subject showed that there subjects with many outlying proteins (e.g.: subject 154, 108, 9, 121, 52, 77), however, the Wilcoxon Rank-Sum test results showed there’s no evidence of a difference in outlier counts between ASD and TD groups (p value = 0.8166).
 
