--- a/scripts/analysis-main.Rmd
+++ b/scripts/analysis-main.Rmd
@@ -108,100 +108,193 @@ After transforming `prot2`, the protein values appear slightly more normal, redu
 **Goal: Explore alternative feature selection**
 
 ```{r, message=FALSE}
-# Load libraries
 library(tidyverse)
-library(caret)
-library(glmnet)
-library(pROC)
+library(infer)
+library(randomForest)
+library(tidymodels)
+library(modelr)
 library(yardstick)
+library(glmnet)
+library(here)
+
+load(here("data", "biomarker-clean.RData")) # loads data as biomarker_clean
+
 ```
 
 
 ```{r}
-# 1. Load processed data
-load(here('data', 'biomarker-clean.RData')) 
+## MULTIPLE TESTING
+####################
+# function to compute tests
+test_fn <- function(.df){
+  t_test(.df, 
+         formula = level ~ group,
+         order = c('ASD', 'TD'),
+         alternative = 'two-sided',
+         var.equal = F)
+}
 
-# Rename 
-biomarker <- biomarker_clean
+ttests_out <- biomarker_clean %>%
+  # drop ADOS score
+  select(-ados) %>%
+  # arrange in long format
+  pivot_longer(-group, 
+               names_to = 'protein', 
+               values_to = 'level') %>%
+  # nest by protein
+  nest(data = c(level, group)) %>% 
+  # compute t tests
+  mutate(ttest = map(data, test_fn)) %>%
+  unnest(ttest) %>%
+  # sort by p-value
+  arrange(p_value) %>%
+  # multiple testing correction
+  mutate(m = n(),
+         hm = log(m) + 1/(2*m) - digamma(1),
+         rank = row_number(),
+         p.adj = m*hm*p_value/rank)
 
-# Convert group to factor (TD = control group)
-biomarker$group <- factor(biomarker$group, levels = c("TD", "ASD"))
-```
+# select significant proteins
+proteins_s1 <- ttests_out %>%
+  slice_min(p.adj, n = 10) %>%
+  pull(protein)
 
-```{r}
-# 2. Train/Test Split (80% train, 20% test)
+## RANDOM FOREST
+##################
+# store predictors and response separately
+predictors <- biomarker_clean %>%
+  select(-c(group, ados))
 
-set.seed(123)
-train_idx <- createDataPartition(biomarker$group, 
-                                 p = 0.8, list = FALSE)
+response <- biomarker_clean %>% pull(group) %>% factor()
 
-train <- biomarker[train_idx, ]
-test <- biomarker[-train_idx, ]
+# fit RF
+set.seed(101422)
+rf_out <- randomForest(x = predictors, 
+                       y = response, 
+                       ntree = 1000, 
+                       importance = T)
 
-# Prepare matrices for glmnet
-x_train <- as.matrix(train %>% select(-group, -ados))
-y_train <- train$group
+# compute importance scores
+proteins_s2 <- rf_out$importance %>% 
+  as_tibble() %>%
+  mutate(protein = rownames(rf_out$importance)) %>%
+  slice_max(MeanDecreaseGini, n = 10) %>%
+  pull(protein)
 
-x_test <- as.matrix(test %>% select(-group, -ados))
-y_test <- test$group
-```
+## LASSO with guided penalty 
+###########################################
 
+# Get the intersection of important proteins
+proteins_sstar <- intersect(proteins_s1, proteins_s2)
+cat("Selected proteins from intersection:", proteins_sstar, "\n")
+cat("Number of selected proteins:", length(proteins_sstar), "\n")
 
-```{r}
-# 3. LASSO Classification and Feature Selection 
+# LASSO with all proteins, choosing different penalties for sstar vs x_train
 
-set.seed(123)
-lasso_fit <- cv.glmnet(
+# full dataset (all proteins except ADOS)
+biomarker_full <- biomarker_clean %>%
+  select(-ados) %>%
+  mutate(class = (group == 'ASD')) %>%
+  select(-group)
+
+# training and test set
+set.seed(101422)
+biomarker_split <- biomarker_full %>%
+  initial_split(prop = 0.8)
+
+# matrices for glmnet
+x_train <- training(biomarker_split) %>%
+  select(-class) %>%
+  as.matrix()
+
+y_train <- training(biomarker_split) %>%
+  pull(class) %>%
+  as.numeric()
+
+x_test <- testing(biomarker_split) %>%
+  select(-class) %>%
+  as.matrix()
+
+y_test <- testing(biomarker_split) %>%
+  pull(class) %>%
+  as.numeric()
+
+# penalty factors: lower penalty for pre-selected proteins
+penalty_factors <- rep(1, ncol(x_train))  # Start with penalty = 1 for all
+names(penalty_factors) <- colnames(x_train)
+
+# no penalty for sstar proteins (ones selected by t-test and RF)
+penalty_factors[proteins_sstar] <- 0  
+
+cat("\nPenalty factors:\n")
+print(table(penalty_factors))
+
+# fit LASSO with guided penalties
+set.seed(101422)
+lasso_guided <- cv.glmnet(
   x_train, y_train,
-  alpha = 1, # LASSO penalty
-  family = "binomial"
+  alpha = 1,
+  family = "binomial",
+  penalty.factor = penalty_factors,
+  type.measure = "auc",
+  nfolds = 10
 )
 
-# Extract non-zero coefficients (The Alternative Panel)
-lasso_coef <- coef(lasso_fit, s = "lambda.min")
-lasso_features <- rownames(lasso_coef)[lasso_coef[, 1] != 0]
-lasso_features <- lasso_features[lasso_features != "(Intercept)"]
+# get predictions
+pred_prob_guided <- predict(lasso_guided, newx = x_test, 
+                           s = "lambda.min", type = "response")[,1]
 
-cat("\nQ4 Alternative Panel (Pure LASSO features):\n")
-print(lasso_features)
+# metrics
+test_results_guided <- data.frame(
+  pred = pred_prob_guided,
+  pred_class = factor(pred_prob_guided > 0.5, 
+                      levels = c(FALSE, TRUE), 
+                      labels = c("TD", "ASD")),
+  class_factor = factor(y_test, 
+                       levels = c(0, 1), 
+                       labels = c("TD", "ASD"))
+)
+
+# class-based metrics
+class_metrics <- metric_set(sensitivity, specificity, accuracy)
+class_output_guided <- test_results_guided %>%
+  class_metrics(estimate = pred_class,
+                truth = class_factor,
+                event_level = 'second')
+
+# AUC
+prob_output_guided <- test_results_guided %>%
+  roc_auc(truth = class_factor,
+          pred,
+          event_level = 'second')
+
+# Combine all metrics
+all_metrics_guided <- bind_rows(class_output_guided, prob_output_guided)
+print("\nGuided LASSO Results:")
+print(all_metrics_guided)
+
+# which coefficients are non-zero
+coef_guided <- coef(lasso_guided, s = "lambda.min")
+selected_features <- rownames(coef_guided)[which(coef_guided != 0)]
+selected_features <- selected_features[selected_features != "(Intercept)"]
+
+cat("\nSelected features by guided LASSO:\n")
+print(selected_features)
+cat("\nFeatures from proteins_sstar that were kept:\n")
+print(intersect(selected_features, proteins_sstar))
 ```
 
+We chose to find an alternative panel that achieves improved classification accuracy using guided LASSO. 
 
+First we identified important proteins using the method used in class: multiple t-test approach into a random forest in which importance scores were used to select proteins. Proteins that appeared in both lists were used in the guided LASSO model but with no penalty, whereas the list of all the other proteins in the full dataset were given the full $L1$ penalty. You can think of this from a Bayesian standpoint where we used prior data (the pre-selected panel of 5 proteins) to inform our prior belief about protein importance.
 
-```{r}
-# 4. Evaluation of LASSO Classifier on Test Set (The Answer)
-
-# Predict probabilities on the held-out test set
-pred_prob_lasso <- predict(lasso_fit, newx = x_test, 
-                           s = "lambda.min", type = "response")
-pred_class_lasso <- factor(ifelse(pred_prob_lasso > 0.5, 
-                                  "ASD", "TD"), levels = c("TD", "ASD"))
-
-# Calculate AUROC
-roc_lasso <- roc(y_test, as.numeric(pred_prob_lasso), 
-                 levels = c("TD", "ASD"))
-auroc_final <- auc(roc_lasso)
-
-# Get confusion matrix object
-cm <- confusionMatrix(pred_class_lasso, y_test, positive = "ASD")
-
-# Print all metrics
-cat("AUC ROC (LASSO classifier) on Test Set: ", auroc_final, "\n")
-cat("Test Set Accuracy (LASSO classifier): ", cm$overall['Accuracy'], "\n")
-cat("Sensitivity (LASSO classifier): ", cm$byClass['Sensitivity'], "\n")
-cat("Specificity (LASSO classifier): ", cm$byClass['Specificity'], "\n")
-```
-
-We chose to find an alternative panel that achieves improved classification accuracy by utilizing the pure LASSO (Least Absolute Shrinkage and Selection Operator) penalized regression model.
-
-
-The original analysis used the intersection of three methods (multiple $t$-test, Random Forest, and LASSO) followed by an unregularized Logistic Regression. For this alternative approach, we used the LASSO method alone to perform both feature selection and classification. The LASSO model was trained on the $80\%$ training partition, and the optimal penalty ($\lambda_{\text{min}}$) automatically selected the feature panel.
+The LASSO model was trained on the $80\%$ training partition, and the optimal penalty ($\lambda_{\text{min}}$) automatically selected the feature panel.
 
 Results:
 
-1. Alternative Panel: The LASSO model selected a panel of 44 proteins listed above under the Alternate Panel. 
+1. Alternative Panel: The LASSO model selected a panel of 35 proteins that is listed above. 
 
-2. Test Set Performance: The LASSO classifier achieved a Test Set AUC ROC (Area Under the Receiver Operating Characteristic curve) of $0.858$, accuracy of $0.767$, sensitivity of $0.800$, and specificity of $0.733$.
+2. Test Set Performance: The LASSO classifier achieved a Test Set AUC ROC (Area Under the Receiver Operating Characteristic curve) of $0.858$, accuracy of $0.839$, sensitivity of $0.750$, and specificity of $0.933$.
 
 Comparison to the benchmark:
 
@@ -209,4 +302,7 @@ $$
 \text{roc auc} = 0.883 \text{ ; accuracy}=0.774  \text{ ; sensitivity} = 0.812  \text{ ; specificity} = 0.733 
 $$
 
-Metrics are similar to the baseline. Panel is more compelex though (compared to panel of 5 proteins in the baseline). 
+Overall, accuracy was increased by $8\%$, specificity increased by $27\%$, AUC stayed the same at $0.858$, and sensitivity decreased by $8\%$. Even though sensitivity increased slightly, the other metric show an improvement in overall classification accuracy.
+
+
+
