--- a/scripts/anna_analysis.rmd
+++ b/scripts/anna_analysis.rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 # Q2 Anna
 
 
@@ -5,60 +10,46 @@
 
 preprocessing.R file code: outlier trimming removed
 ```{r}
-library(tidyverse)
+ # read in data 
+ # biomarker_clean <- read_csv('data/biomarker-raw.csv',  
+          # skip = 2, 
+          # col_select = -2L, 
+          #col_names = c('group', 
+          #              'empty', 
+          #              pull(var_names, abbreviation),
+          #              'ados'), 
+#          na = c('-', '')) %>% 
+#   filter(!is.na(group)) %>% 
+   # log transform, center and scale, and trim 
 
+#   mutate(across(.cols = -c(group, ados), 
+#                 ~ scale(log10(.x))[, 1])) %>%  # no trimming 
 
-# get names
-var_names <- read_csv('data/biomarker-raw.csv', 
-                     col_names = F, 
-                     n_max = 2, 
-                     col_select = -(1:2)) %>%
-  t() %>%
-  as_tibble() %>%
-  rename(name = V1, 
-         abbreviation = V2) %>%
-  na.omit()
+   # reorder columns 
+#   select(group, ados, everything()) 
 
-# function for trimming outliers (good idea??)
-trim <- function(x, .at){
-  x[abs(x) > .at] <- sign(x[abs(x) > .at])*.at
-  return(x)
-}
-
-# read in data
-biomarker_clean <- read_csv('data/biomarker-raw.csv', 
-         skip = 2,
-         col_select = -2L,
-         col_names = c('group', 
-                       'empty',
-                       pull(var_names, abbreviation),
-                       'ados'),
-         na = c('-', '')) %>%
-  filter(!is.na(group)) %>%
-  # log transform, center and scale, and trim
-  
-  mutate(across(.cols = -c(group, ados), 
-                ~ scale(log10(.x))[, 1])) %>%  # no trimming
-
-  # reorder columns
-  select(group, ados, everything())
-
-# export as r binary
-  save(list = 'biomarker_clean',
-     file = 'data/biomarker-clean-notrim.RData')  # new file for Q2
-
+ # export as r binary 
+#   save(list = 'biomarker_clean', 
+#      file = 'data/biomarker-clean-notrim.RData')  # new file for Q2 
 
 ```
 
+
+
 Load the untrimmed data:
-```{r}
+```{r, message = FALSE}
+library(dplyr)
 library(here)
 library(knitr)
+
 load(here("data", "biomarker-clean-notrim.RData"))
 bm_notrim_clean <- biomarker_clean 
 
-kable(head(bm_notrim_clean, 10))
-         
+# Define protein columns
+protein <- setdiff(names(bm_notrim_clean), c("group","ados"))
+
+# Show a small subset
+kable(bm_notrim_clean[1:10, c("group","ados", protein[1:8])])
 ```
 
 
@@ -66,17 +57,18 @@ EDA:
 
 
 Counting the number of outliers per subject.
-A data point is considered an outlier if its value is greater than 3 standard deviations, 99.7% of the distribution under a normal curve.
+
+A data point is considered an outlier if its value is greater than 3 standard deviations above or below the protein's mean, where 99.7% of the distribution lies under a normal curve.
 
 Thus, flagging outliers that have (z score) |z| > 3.
 ```{r}
-protein <- setdiff(names(bm_notrim_clean), c("group","ados"))
 out_flag <- bm_notrim_clean[, protein] %>% mutate(across(everything(), ~ abs(.x) > 3))
 out_counts <- tibble(
   subject = seq_len(nrow(bm_notrim_clean)),
   group   = bm_notrim_clean$group,
   n_out   = rowSums(out_flag, na.rm=TRUE)
 ) 
+
 
 ```
 
@@ -100,6 +92,7 @@ Are outliers more frequent in one group or the other? (Hint: consider tabulating
 
 Comparing the outliers of each group:
 ```{r}
+library(ggplot2)
 ggplot(out_counts, aes(group, n_out)) +
   geom_boxplot(outlier.shape=NA) + geom_jitter(width=.15, alpha=.4)
 ```
@@ -109,14 +102,19 @@ From the visual, it seems like the TD group has more outliers, with the highest 
 Wilcoxon rank-sum test comparing the per-subject outlier counts (n_out) between the two groups (ASD vs TD).
 ```{r}
 result <- wilcox.test(n_out ~ group, data = out_counts, exact=FALSE)
-result
 
+result_df <- data.frame(
+    W = unname(result$statistic),
+  p_value = signif(result$p.value, 4)
+  
+)
+
+kable(result_df)
 ```
 
-From the Wilcoxon rank-sum test, the p-value of 0.8166 > $alpha$ = 0.05, so we conclude there is no evidence of a significant difference in outlier counts between the ASD and TD groups.
+From the Wilcoxon rank-sum test, the p-value of 0.8166 > the alpha level of 0.05, so we conclude there is no evidence of a significant difference in outlier counts between the ASD and TD groups.
 
 
 Conclusion:
 
-Counting |z|>3 outliers per subject showed that there subjects with many outlying proteins (e.g.: subject 154, 108, 9, 121, 52, 77), however, the Wilcoxon Rank-Sum test results showed there’s no evidence of a difference in outlier counts between ASD and TD groups (p value = 0.8166).
-
+Counting outliers per subject (outliers are defined as values more than 3 standard deviations above or below the protein’s mean) showed there are subjects with many outlying proteins (e.g., 154, 108, 9, 121, 52, 77). However, a Wilcoxon rank-sum test found no evidence of a group difference in outlier counts between ASD and TD (p value = 0.8166).
