--- a/results/report.qmd
+++ b/results/report.qmd
@@ -25,9 +25,13 @@ library(tidyverse)
 
 Write a brief one-paragraph abstract that describes the contents of your write-up.
 
+This report covers an analysis of blood biomarkers for autism spectrum disorder (ASD), analyzing proteins and their association with ASD. Emulating the paper Hewitson et al. 2021, we analyze the dataset used in the paper, data preprocessing including transformations and outlier trimmings, methodologies for selecting a panel of proteins for ASD classification, and improvement in protein panel selection.
+
 ## Dataset
 
 Write a brief data description, including: how data were obtained; sample characteristics; variables measured; and data preprocessing. This can be largely based on the source paper and should not exceed 1-2 paragraphs.
+
+Data was taken via blood serum sample from 76 boys with ASD and 78 typically developing (TD) boys ranging from 18 months - 8 years of age. The serum samples were analyzed to identify possible eraly biological markers for ASD. Proteomic analysis of serum was performed using SomaLogic’s SOMAScan$^{TM}$ assay 1.3K platform. A total of 1,317 proteins were analyzed, with two additional variables `ADOS` and `group` pertaining to ASD severity and whether the subject is TD or has ASD. Data preprocessing was done to eliminate missing values, $log_{10}$ transform biomarker levels to stabilize variance, large values, and normalize skewed distributions, center and scale transformed data to standardize the distribution of each biomarker, and trim outliers to prevent disproportionate influence.
 
 ## Summary of published analysis
 
@@ -106,9 +110,11 @@ Summarize your findings here. I've included some subheaders in a way that seems 
 
 ### Impact of preprocessing and outliers
 
-**Tasks 1-2:** After looking at the raw protein level distributions for a sample of 4 proteins in the dataset, it became clear that the scale of each protein level was very different across proteins. For example, one protein's mean was 17,164 while another's was 458. Furthermore, we found certain proteins had skewed distributions where one protein had a mean roughly 5,000 units larger than its median, indicating a right skew. Looking at each protein's density further revealed the differing scales of each protein level, large outliers, and skewed distributions apparent in 2 out of the 4 randomly selected proteins.
+**Task 1:** After looking at the raw protein level distributions for a sample of 4 proteins in the dataset, it became clear that the scale of each protein level was very different across proteins. For example, one protein's mean was 17,164 while another's was 458. Furthermore, we found certain proteins had skewed distributions where one protein had a mean roughly 5,000 units larger than its median, indicating a right skew. Looking at each protein's density further revealed the differing scales of each protein level, large outliers, and skewed distributions apparent in 2 out of the 4 randomly selected proteins.
 
 The log transformation of the protein levels helps to compress the scale of protein levels across the wide range of positive values that were encountered. Additionally, the logarithm helps with skewed data, helping to make data more symmetric and closer to a normal distribution (as confirmed with histograms and a QQ Plot).
+
+**Task 2:**
 
 ### Methodological variations
 
