--- a/results/report.qmd
+++ b/results/report.qmd
@@ -41,7 +41,10 @@ Summarize the methodology of the paper in 1-3 paragraphs. You need not explain t
 
 **Q1:** A logarithmic transformation was done to the biomarker levels in order to reduce scale, variance, and skewedness of the data. Furthermore, the data was centered and scaled to standardize the distribution of each biomarker.
 
-![](images/Screenshot 2025-11-05 at 9.12.04 PM.png)
+```{r}
+knitr::include_graphics("../images/Q1Comparison.png")
+```
+
 
 From the density plot, `prot2` looks skewed (strongly right-skewed). It contain large outliers, and the scale of `prot2`'s protein level is very high. But, after log transforming, the right-skewed `prot2` now appears more symmetric and of a much smaller and more readable scale.
 
