trial-adding Q1compariosn picture to report.qmd

--- a/results/report.qmd
+++ b/results/report.qmd
@@ -5,7 +5,7 @@ author: "Lucas Childs, Bahaar Ahuja, ..."
 date: last-modified
 published-title: "Updated"
 editor: visual
-format: html
+format: pdf
 code-copy: true
 execute:
   message: false
